# wibt-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/factuality_evaluation/: key_fact_validation.txt  skeptic.txt
prompts/factuality_evaluation/general/: adjudicator.txt  advocate.txt  key_fact_alignment.txt  key_fact_generation.txt  key_fact_validation.txt  skeptic.txt
prompts/factuality_evaluation/test/: advocate.txt  (+2 more)
prompts/summary/: evaluate_factuality.txt  evaluate_readability.txt  read_eval_system.txt  refine_prompt.txt  refine_system.txt  summarize copy.txt  summarize.txt  summary_system.txt
prompts/translation/: direct_translation.txt  draft.txt  draft_system.txt  pre_draft.txt  proofread.txt  proofread_system.txt  refine_draft.txt
src/: create_summary.py  create_translation.py  test.py
src/agents/: __init__.py  adjudicator_agent.py  agent.py  argument_agent.py  fact_alignment_agent.py  fact_containment_agent.py  fact_extractor_agent.py  fact_validator_agent.py  read_eval_agent.py  refinement_agent.py  summary_agent.py  translation_draft_agent.py  translation_proofread_agent.py
src/cli/: __init__.py  alignment.py  extraction.py  summary.py
src/factuality/: __init__.py  alignment.py  extraction.py
src/gui/: summary.py  test.py  translation.py
src/models/: __init__.py  __init__py  argument.py  judgement.py  keyfact_containment.py  keyfact_list.py  keyfact_validation.py  prompt.py  read_eval.py
src/utils/: __init__.py  agent.py  json_helper.py  open_webui.py  openai_client.py  sentence_helper.py
tests/: test_json_helper.py
(+42 files in other folders)
