[project]
name = "wibt-tool"
dynamic = ["version"]
requires-python = ">= 3.14"
dependencies = [
  "dotenv",
  "requests",
  "openai",
  "marimo",
  "altair",
  "pandas",
  "pyarrow",
  "pydantic",
]

[tool.marimo.runtime]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
